crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__inheritance__constructor.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/constructor.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class A (global @3) ∅
      (method init [(local this @0) (local param @1)] []
         (block
            (expr (= (setattr (local this @0) field) (local param @1)))
            (init-return)))
      (method test [(local this @0)] []
         (block
            (print (attr (local this @0) field)))))
   (class B (global @4) (global A @3))
   (var b (global @5) (call +5 (global B @4) "value"))
   (expr (call +6 (attr (global b @5) test))))

----- stderr -----
