crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__inheritance__inherit_from_nil.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/inherit_from_nil.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var Nil (global @3) nil)
   (class Foo (global @4) (global Nil @3)))

----- stderr -----
