crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__inheritance__inherit_from_number.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/inherit_from_number.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var Number (global @1) 123.0)
   (class Foo (global @2) (global Number @1)))

----- stderr -----
