crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__inheritance__set_fields_from_base_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/set_fields_from_base_class.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method foo [(local this @0) (local a @1) (local b @2)] []
         (block
            (expr (= (setattr (local this @0) field1) (local a @1)))
            (expr (= (setattr (local this @0) field2) (local b @2)))))
      (method fooPrint [(local this @0)] []
         (block
            (print (attr (local this @0) field1))
            (print (attr (local this @0) field2)))))
   (class Bar (global @2) (global Foo @1)
      (method bar [(local this @0) (local a @1) (local b @2)] [None]
         (block
            (expr (= (setattr (local this @0) field1) (local a @1)))
            (expr (= (setattr (local this @0) field2) (local b @2)))))
      (method barPrint [(local this @0)] [None]
         (block
            (print (attr (local this @0) field1))
            (print (attr (local this @0) field2)))))
   (var bar (global @3) (call +3 (global Bar @2)))
   (expr (call +4 (attr (global bar @3) foo) "foo 1" "foo 2"))
   (expr (call +4 (attr (global bar @3) fooPrint)))
   (expr (call +4 (attr (global bar @3) bar) "bar 1" "bar 2"))
   (expr (call +4 (attr (global bar @3) barPrint)))
   (expr (call +4 (attr (global bar @3) fooPrint))))

----- stderr -----
